--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
+beautifulsoup4
+comtypes
 edge-tts
 flask
-jieba
+homeassistant_api
 keyboard
-librosa
+lxml
 ollama
 openai
 opencv-python
 pillow
+ping3
+psutil
 pyautogui
 pyaudio
 pygame
 pyttsx3
-funasr_onnx==0.4.1
+sherpa_onnx
+soundfile
+zhipuai
 numpy==1.26.4
-
-#下述两个库需分别执行命令安装(命令行执行时去掉#号)
-#pip install flet==0.13.0
-#pip install letta==0.6.7
+pycaw==20240210
+pynvml==11.5.3
+pyside6==6.8.0
+setuptools==80.9.0
