--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 beautifulsoup4
 comtypes
-edge-tts
 flask
 homeassistant_api
 keyboard
@@ -18,6 +17,7 @@ pyttsx3
 sherpa_onnx
 soundfile
 zhipuai
+edge-tts==7.2.1
 numpy==1.26.4
 pycaw==20240210
 pynvml==11.5.3
